progress for the 1.19.4 port